objects/Contact/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wyzsze</fullName>
            </value>
            <value>
                <fullName>Zawodowe</fullName>
            </value>
            <value>
                <fullName>Srednie</fullName>
            </value>
            <value>
                <fullName>Podstawowe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>